Add hidden feature to display the mined cells

--- a/style.css
+++ b/style.css
@@ -66,3 +66,16 @@ div {
   margin-top: 5px;
   color: #e76346;
 }
+
+#bombs-toggle {
+  display: none;
+}
+
+#bombs-toggle:checked ~ * .bomb{
+  background-color: #C3C3A3;
+}
+
+#toggle-btn {
+  cursor: inherit;
+}
+
